--- a/3.TodoListApp-LocalStorage/style.css
+++ b/3.TodoListApp-LocalStorage/style.css
@@ -36,6 +36,7 @@ body {
     padding: 10px 20px;
     font-size: 16px;
     width: 100%;
+    box-sizing: border-box;
     background-color: #28a745;
     color: white;
     border: none;
@@ -50,6 +51,9 @@ body {
 
 /* Style for each todo item */
 .todo-item {
+    width: 100%;
+    box-sizing: border-box;
+
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -58,6 +62,7 @@ body {
     background-color: #fff;
     border: 1px solid #ddd;
     border-radius: 4px;
+    
 }
 
 .todo-item span {
